...
import PromiseKit

final class UserInfoInputViewController: UIViewController {

    @IBOutlet weak var scrollView: UIScrollView!
    /// 氏名フィールド
    @IBOutlet weak var nameField: UITextField!
    /// フリガナフィールド
    @IBOutlet weak var phoneticField: UITextField!
    /// TELフィールド
    @IBOutlet @objc weak var telField: UITextField! {
        didSet {
            telField?.addDoneToolbar(onDone: (target: self, action: #selector(didTapDone)))
...
